python-interpreter/src/main/java/org/ah/python/grammar/PythonParser.java
package org.ah.python.grammar;



import org.ah.python.grammar.PythonScanner.Token;
import org.ah.python.interpreter.Assign;
import org.ah.python.interpreter.Assignable;
import org.ah.python.interpreter.BinaryOp;
import org.ah.python.interpreter.BoolOp;
import org.ah.python.interpreter.BoolopType;
import org.ah.python.interpreter.Break;
import org.ah.python.interpreter.Call;
import org.ah.python.interpreter.CmpopType;
import org.ah.python.interpreter.Compare;
import org.ah.python.interpreter.Continue;
import org.ah.python.interpreter.Def;
import org.ah.python.interpreter.Del;
import org.ah.python.interpreter.For;
import org.ah.python.interpreter.Global;
import org.ah.python.interpreter.If;
import org.ah.python.interpreter.Import;
import org.ah.python.interpreter.Module;
import org.ah.python.interpreter.OperatorType;
import org.ah.python.interpreter.PythonBoolean;
import org.ah.python.interpreter.PythonClassDef;
import org.ah.python.interpreter.PythonDictionary;
import org.ah.python.interpreter.PythonFloat;
import org.ah.python.interpreter.PythonInteger;
import org.ah.python.interpreter.PythonList;
import org.ah.python.interpreter.PythonNone;
import org.ah.python.interpreter.PythonObject;
import org.ah.python.interpreter.PythonString;
import org.ah.python.interpreter.PythonTuple;
import org.ah.python.interpreter.Reference;
import org.ah.python.interpreter.Return;
import org.ah.python.interpreter.Subscript;
import org.ah.python.interpreter.Suite;
import org.ah.python.interpreter.UnaryOp;
import org.ah.python.interpreter.UnaryopType;
import org.ah.python.interpreter.While;
import org.ah.python.modules.BuiltInFunctions;

import java.util.ArrayList;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public class PythonParser {


    private Suite currentSuite;
    private OperatorType operatorType;
    private CmpopType cmpopType;
    private PythonObject currentObject;

    private List<String> stringList = new ArrayList<String>();
    private Import currentImport;
    private List<PythonObject> currentList;

    private Module module;
    private boolean trailingComma = false;

    public Module getModule() { return module; }



    public PythonParser() {
    }

    public PythonParser(org.ah.python.grammar.PythonScannerFixed s) {
        setScanner(s);
    }

    protected org.ah.python.grammar.PythonScannerFixed scanner;
    protected Token t = PythonScanner.BOF_TOKEN;
    protected Token nt = t;
    protected int id;

    protected String string;

    public void setScanner(org.ah.python.grammar.PythonScannerFixed s) {
        this.scanner = s;
    }

    public org.ah.python.grammar.PythonScannerFixed getScanner() {
        return scanner;
    }

    public void parse(org.ah.python.grammar.PythonScannerFixed s) {
        setScanner(s);
        // parse();
    }

    public boolean cmpToken(int id, int token) {
        return id == token;
    }

    public void next() {
        t = nt;
        nt = scanner.getNextToken();
        id = nt.getId();
    }

    public void parse() throws ParserError {
        next(); // <-- here
            single_input();
    }

    // public single_input<null> = (.k=1.) NEWLINE|simple_stmt|compound_stmt NEWLINE {NEWLINE};
    public void single_input() throws ParserError {
        if ((id == PythonScanner.TOKEN_NEWLINE)) {
            if (id == PythonScanner.TOKEN_NEWLINE) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "NEWLINE");
            }
        } else if (((id >= 1) && (id <=10)) || (id == 17) || ((id >= 19) && (id <=21)) || ((id >= 27) && (id <=28)) || (id == 33) || (id == PythonScanner.TOKEN_LPAREN) || (id == PythonScanner.TOKEN_LBRACK) || (id == PythonScanner.TOKEN_LKBRACK) || (id == PythonScanner.TOKEN_STAR) || (id == PythonScanner.TOKEN_ELLIPSIS) || ((id >= PythonScanner.TOKEN_PLUS) && (id <=PythonScanner.TOKEN_MINUS)) || (id == PythonScanner.TOKEN_TILDA) || ((id >= PythonScanner.TOKEN_NAME) && (id <=PythonScanner.TOKEN_NUMBER)) || (id == PythonScanner.TOKEN_STRING)) {
            simple_stmt();
        } else if ((id == 11) || ((id >= 14) && (id <=16)) || (id == 18) || (id == 25) || (id == 31) || (id == PythonScanner.TOKEN_AT)) {
            compound_stmt();
            if (id == PythonScanner.TOKEN_NEWLINE) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "NEWLINE");
            }
            while ((id == PythonScanner.TOKEN_NEWLINE)) {
                if (id == PythonScanner.TOKEN_NEWLINE) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "NEWLINE");
                }
            } // while
        } else {
            throw new ParserError(t, "'del','pass','continue','break','return','raise','from','global','nonlocal','assert','if','for','while','def','yield','class','None','True','False','with','lambda','not','try','import',LPAREN,LBRACK,LKBRACK,STAR,ELLIPSIS,AT,PLUS,MINUS,TILDA,NEWLINE,NAME,NUMBER,STRING");
        }
    } // single_input

    // public file_input<null> = {(.k=1.) NEWLINE|stmt};
    public void file_input() throws ParserError {
 module = new Module(); currentSuite = module.getSuite();
        while (((id >= 1) && (id <=11)) || ((id >= 14) && (id <=21)) || (id == 25) || ((id >= 27) && (id <=28)) || (id == 31) || (id == 33) || (id == PythonScanner.TOKEN_LPAREN) || (id == PythonScanner.TOKEN_LBRACK) || (id == PythonScanner.TOKEN_LKBRACK) || (id == PythonScanner.TOKEN_STAR) || ((id >= PythonScanner.TOKEN_ELLIPSIS) && (id <=PythonScanner.TOKEN_AT)) || ((id >= PythonScanner.TOKEN_PLUS) && (id <=PythonScanner.TOKEN_MINUS)) || (id == PythonScanner.TOKEN_TILDA) || (id == PythonScanner.TOKEN_NEWLINE) || ((id >= PythonScanner.TOKEN_NAME) && (id <=PythonScanner.TOKEN_NUMBER)) || (id == PythonScanner.TOKEN_STRING)) {
            if ((id == PythonScanner.TOKEN_NEWLINE)) {
                if (id == PythonScanner.TOKEN_NEWLINE) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "NEWLINE");
                }
            } else if (((id >= 1) && (id <=11)) || ((id >= 14) && (id <=21)) || (id == 25) || ((id >= 27) && (id <=28)) || (id == 31) || (id == 33) || (id == PythonScanner.TOKEN_LPAREN) || (id == PythonScanner.TOKEN_LBRACK) || (id == PythonScanner.TOKEN_LKBRACK) || (id == PythonScanner.TOKEN_STAR) || ((id >= PythonScanner.TOKEN_ELLIPSIS) && (id <=PythonScanner.TOKEN_AT)) || ((id >= PythonScanner.TOKEN_PLUS) && (id <=PythonScanner.TOKEN_MINUS)) || (id == PythonScanner.TOKEN_TILDA) || ((id >= PythonScanner.TOKEN_NAME) && (id <=PythonScanner.TOKEN_NUMBER)) || (id == PythonScanner.TOKEN_STRING)) {
                stmt();
            } else {
                throw new ParserError(t, "'del','pass','continue','break','return','raise','from','global','nonlocal','assert','if','for','while','def','yield','class','None','True','False','with','lambda','not','try','import',LPAREN,LBRACK,LKBRACK,STAR,ELLIPSIS,AT,PLUS,MINUS,TILDA,NEWLINE,NAME,NUMBER,STRING");
            }
        } // while
    } // file_input

    // public eval_input<null> = testlist {NEWLINE};
    public void eval_input() throws ParserError {
        testlist();
        while ((id == PythonScanner.TOKEN_NEWLINE)) {
            if (id == PythonScanner.TOKEN_NEWLINE) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "NEWLINE");
            }
        } // while
    } // eval_input

    // public decorator<null> = AT dotted_name [LPAREN [arglist] RPAREN] NEWLINE CODE;
    public void decorator() throws ParserError {
        if (id == PythonScanner.TOKEN_AT) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "AT");
        }
        dotted_name();
        if ((id == PythonScanner.TOKEN_LPAREN)) {
            if (id == PythonScanner.TOKEN_LPAREN) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "LPAREN");
            }
            if (((id >= 19) && (id <=21)) || ((id >= 27) && (id <=28)) || (id == PythonScanner.TOKEN_LPAREN) || (id == PythonScanner.TOKEN_LBRACK) || (id == PythonScanner.TOKEN_LKBRACK) || ((id >= PythonScanner.TOKEN_STAR) && (id <=PythonScanner.TOKEN_STARSTAR)) || (id == PythonScanner.TOKEN_ELLIPSIS) || ((id >= PythonScanner.TOKEN_PLUS) && (id <=PythonScanner.TOKEN_MINUS)) || (id == PythonScanner.TOKEN_TILDA) || ((id >= PythonScanner.TOKEN_NAME) && (id <=PythonScanner.TOKEN_NUMBER)) || (id == PythonScanner.TOKEN_STRING)) {
                arglist();
            }
            if (id == PythonScanner.TOKEN_RPAREN) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "RPAREN");
            }
        }
        if (id == PythonScanner.TOKEN_NEWLINE) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "NEWLINE");
        }
         throw new UnsupportedOperationException("decorator");
    } // decorator

    // public decorators<null> = decorator {decorator} CODE;
    public void decorators() throws ParserError {
        decorator();
        while ((id == PythonScanner.TOKEN_AT)) {
            decorator();
        } // while
         throw new UnsupportedOperationException("decorators");
    } // decorators

    // public decorated<null> = decorators (.k=1.) classdef|funcdef CODE;
    public void decorated() throws ParserError {
        decorators();
        if ((id == 18)) {
            classdef();
        } else if ((id == 16)) {
            funcdef();
        } else {
            throw new ParserError(t, "'def','class'");
        }
         throw new UnsupportedOperationException("decorated");
    } // decorated

    // public funcdef<null> = "def" NAME CODE parameters CODE [DASH_GT test CODE] COLON CODE suite CODE;
    public void funcdef() throws ParserError {
        if (id == 16) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "\"def\"");
        }
        if (id == PythonScanner.TOKEN_NAME) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "NAME");
        }
         Def def = new Def(t.toString());
        parameters();

                 for (PythonObject arg : currentList) {
                     if (arg instanceof Reference) {
                         def.getArguments().add((Reference)arg);
                     } else {
                         throw new IllegalArgumentException("Expected a varibale for function def argument but got " + arg);
                     }
                 }

        if ((id == PythonScanner.TOKEN_DASH_GT)) {
            if (id == PythonScanner.TOKEN_DASH_GT) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "\"->\"");
            }
            test();
             throw new UnsupportedOperationException("->");
        }
        if (id == PythonScanner.TOKEN_COLON) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "COLON");
        }

                 Suite save = currentSuite; currentSuite = def.getSuite();

        suite();
         currentSuite = save; currentSuite.asList().add(def);
    } // funcdef

    // public parameters<null> = LPAREN CODE [typedargslist] RPAREN;
    public void parameters() throws ParserError {
        if (id == PythonScanner.TOKEN_LPAREN) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "LPAREN");
        }
         currentList = new ArrayList<PythonObject>();
        if (((id >= PythonScanner.TOKEN_STAR) && (id <=PythonScanner.TOKEN_STARSTAR)) || (id == PythonScanner.TOKEN_NAME)) {
            typedargslist();
        }
        if (id == PythonScanner.TOKEN_RPAREN) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "RPAREN");
        }
    } // parameters

    // public typedargslist<null> = (.k=1.) tfpdef CODE [EQ test CODE] {COMMA tfpdef CODE [EQ test CODE]} [COMMA [(.k=1.) STAR [tfpdef] {COMMA tfpdef [EQ test]} [COMMA STARSTAR tfpdef]|STARSTAR tfpdef]] CODE|STAR [tfpdef] {COMMA tfpdef [EQ test]} [COMMA STARSTAR tfpdef] CODE|STARSTAR tfpdef CODE;
    public void typedargslist() throws ParserError {
        if ((id == PythonScanner.TOKEN_NAME)) {
            tfpdef();
             List<PythonObject> args = new ArrayList<PythonObject>(); args.add(currentObject);
            if ((id == PythonScanner.TOKEN_EQ)) {
                if (id == PythonScanner.TOKEN_EQ) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "EQ");
                }
                test();
                 throw new UnsupportedOperationException("named parameters");
            }
            while ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                tfpdef();
                 args.add(currentObject);
                if ((id == PythonScanner.TOKEN_EQ)) {
                    if (id == PythonScanner.TOKEN_EQ) {
                        next(); // <-- here 2
                    } else {
                        throw new ParserError(t, nt, "EQ");
                    }
                    test();
                     throw new UnsupportedOperationException("named parameters");
                }
            } // while
            if ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                if (((id >= PythonScanner.TOKEN_STAR) && (id <=PythonScanner.TOKEN_STARSTAR))) {
                    if ((id == PythonScanner.TOKEN_STAR)) {
                        if (id == PythonScanner.TOKEN_STAR) {
                            next(); // <-- here 2
                        } else {
                            throw new ParserError(t, nt, "STAR");
                        }
                        if ((id == PythonScanner.TOKEN_NAME)) {
                            tfpdef();
                        }
                        while ((id == PythonScanner.TOKEN_COMMA)) {
                            if (id == PythonScanner.TOKEN_COMMA) {
                                next(); // <-- here 2
                            } else {
                                throw new ParserError(t, nt, "COMMA");
                            }
                            tfpdef();
                            if ((id == PythonScanner.TOKEN_EQ)) {
                                if (id == PythonScanner.TOKEN_EQ) {
                                    next(); // <-- here 2
                                } else {
                                    throw new ParserError(t, nt, "EQ");
                                }
                                test();
                            }
                        } // while
                        if ((id == PythonScanner.TOKEN_COMMA)) {
                            if (id == PythonScanner.TOKEN_COMMA) {
                                next(); // <-- here 2
                            } else {
                                throw new ParserError(t, nt, "COMMA");
                            }
                            if (id == PythonScanner.TOKEN_STARSTAR) {
                                next(); // <-- here 2
                            } else {
                                throw new ParserError(t, nt, "\"**\"");
                            }
                            tfpdef();
                        }
                    } else if ((id == PythonScanner.TOKEN_STARSTAR)) {
                        if (id == PythonScanner.TOKEN_STARSTAR) {
                            next(); // <-- here 2
                        } else {
                            throw new ParserError(t, nt, "\"**\"");
                        }
                        tfpdef();
                    } else {
                        throw new ParserError(t, "STAR,STARSTAR");
                    }
                }
            }
             currentList = args;
        } else if ((id == PythonScanner.TOKEN_STAR)) {
            if (id == PythonScanner.TOKEN_STAR) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "STAR");
            }
            if ((id == PythonScanner.TOKEN_NAME)) {
                tfpdef();
            }
            while ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                tfpdef();
                if ((id == PythonScanner.TOKEN_EQ)) {
                    if (id == PythonScanner.TOKEN_EQ) {
                        next(); // <-- here 2
                    } else {
                        throw new ParserError(t, nt, "EQ");
                    }
                    test();
                }
            } // while
            if ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                if (id == PythonScanner.TOKEN_STARSTAR) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "\"**\"");
                }
                tfpdef();
            }
             throw new UnsupportedOperationException("star parameters");
        } else if ((id == PythonScanner.TOKEN_STARSTAR)) {
            if (id == PythonScanner.TOKEN_STARSTAR) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "\"**\"");
            }
            tfpdef();
             throw new UnsupportedOperationException("starstar parameters");
        } else {
            throw new ParserError(t, "STAR,STARSTAR,NAME");
        }
    } // typedargslist

    // public tfpdef<null> = NAME CODE [COLON test CODE];
    public void tfpdef() throws ParserError {
        if (id == PythonScanner.TOKEN_NAME) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "NAME");
        }
         currentObject = new Reference(null, PythonString.valueOf(t.toString()));
        if ((id == PythonScanner.TOKEN_COLON)) {
            if (id == PythonScanner.TOKEN_COLON) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "COLON");
            }
            test();
             throw new UnsupportedOperationException("parameter types");
        }
    } // tfpdef

    // public varargslist<null> = (.k=1.) vfpdef [EQ test] {COMMA vfpdef [EQ test]} [COMMA [(.k=1.) STAR [vfpdef] {COMMA vfpdef [EQ test]} [COMMA STARSTAR vfpdef]|STARSTAR vfpdef]]|STAR [vfpdef] {COMMA vfpdef [EQ test]} [COMMA STARSTAR vfpdef]|STARSTAR vfpdef;
    public void varargslist() throws ParserError {
        if ((id == PythonScanner.TOKEN_NAME)) {
            vfpdef();
            if ((id == PythonScanner.TOKEN_EQ)) {
                if (id == PythonScanner.TOKEN_EQ) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "EQ");
                }
                test();
            }
            while ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                vfpdef();
                if ((id == PythonScanner.TOKEN_EQ)) {
                    if (id == PythonScanner.TOKEN_EQ) {
                        next(); // <-- here 2
                    } else {
                        throw new ParserError(t, nt, "EQ");
                    }
                    test();
                }
            } // while
            if ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                if (((id >= PythonScanner.TOKEN_STAR) && (id <=PythonScanner.TOKEN_STARSTAR))) {
                    if ((id == PythonScanner.TOKEN_STAR)) {
                        if (id == PythonScanner.TOKEN_STAR) {
                            next(); // <-- here 2
                        } else {
                            throw new ParserError(t, nt, "STAR");
                        }
                        if ((id == PythonScanner.TOKEN_NAME)) {
                            vfpdef();
                        }
                        while ((id == PythonScanner.TOKEN_COMMA)) {
                            if (id == PythonScanner.TOKEN_COMMA) {
                                next(); // <-- here 2
                            } else {
                                throw new ParserError(t, nt, "COMMA");
                            }
                            vfpdef();
                            if ((id == PythonScanner.TOKEN_EQ)) {
                                if (id == PythonScanner.TOKEN_EQ) {
                                    next(); // <-- here 2
                                } else {
                                    throw new ParserError(t, nt, "EQ");
                                }
                                test();
                            }
                        } // while
                        if ((id == PythonScanner.TOKEN_COMMA)) {
                            if (id == PythonScanner.TOKEN_COMMA) {
                                next(); // <-- here 2
                            } else {
                                throw new ParserError(t, nt, "COMMA");
                            }
                            if (id == PythonScanner.TOKEN_STARSTAR) {
                                next(); // <-- here 2
                            } else {
                                throw new ParserError(t, nt, "\"**\"");
                            }
                            vfpdef();
                        }
                    } else if ((id == PythonScanner.TOKEN_STARSTAR)) {
                        if (id == PythonScanner.TOKEN_STARSTAR) {
                            next(); // <-- here 2
                        } else {
                            throw new ParserError(t, nt, "\"**\"");
                        }
                        vfpdef();
                    } else {
                        throw new ParserError(t, "STAR,STARSTAR");
                    }
                }
            }
        } else if ((id == PythonScanner.TOKEN_STAR)) {
            if (id == PythonScanner.TOKEN_STAR) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "STAR");
            }
            if ((id == PythonScanner.TOKEN_NAME)) {
                vfpdef();
            }
            while ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                vfpdef();
                if ((id == PythonScanner.TOKEN_EQ)) {
                    if (id == PythonScanner.TOKEN_EQ) {
                        next(); // <-- here 2
                    } else {
                        throw new ParserError(t, nt, "EQ");
                    }
                    test();
                }
            } // while
            if ((id == PythonScanner.TOKEN_COMMA)) {
                if (id == PythonScanner.TOKEN_COMMA) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "COMMA");
                }
                if (id == PythonScanner.TOKEN_STARSTAR) {
                    next(); // <-- here 2
                } else {
                    throw new ParserError(t, nt, "\"**\"");
                }
                vfpdef();
            }
        } else if ((id == PythonScanner.TOKEN_STARSTAR)) {
            if (id == PythonScanner.TOKEN_STARSTAR) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "\"**\"");
            }
            vfpdef();
        } else {
            throw new ParserError(t, "STAR,STARSTAR,NAME");
        }
    } // varargslist

    // public vfpdef<null> = NAME;
    public void vfpdef() throws ParserError {
        if (id == PythonScanner.TOKEN_NAME) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "NAME");
        }
    } // vfpdef

    // public stmt<null> = (.k=1.) simple_stmt|compound_stmt;
    public void stmt() throws ParserError {
        if (((id >= 1) && (id <=10)) || (id == 17) || ((id >= 19) && (id <=21)) || ((id >= 27) && (id <=28)) || (id == 33) || (id == PythonScanner.TOKEN_LPAREN) || (id == PythonScanner.TOKEN_LBRACK) || (id == PythonScanner.TOKEN_LKBRACK) || (id == PythonScanner.TOKEN_STAR) || (id == PythonScanner.TOKEN_ELLIPSIS) || ((id >= PythonScanner.TOKEN_PLUS) && (id <=PythonScanner.TOKEN_MINUS)) || (id == PythonScanner.TOKEN_TILDA) || ((id >= PythonScanner.TOKEN_NAME) && (id <=PythonScanner.TOKEN_NUMBER)) || (id == PythonScanner.TOKEN_STRING)) {
            simple_stmt();
        } else if ((id == 11) || ((id >= 14) && (id <=16)) || (id == 18) || (id == 25) || (id == 31) || (id == PythonScanner.TOKEN_AT)) {
            compound_stmt();
        } else {
            throw new ParserError(t, "'del','pass','continue','break','return','raise','from','global','nonlocal','assert','if','for','while','def','yield','class','None','True','False','with','lambda','not','try','import',LPAREN,LBRACK,LKBRACK,STAR,ELLIPSIS,AT,PLUS,MINUS,TILDA,NAME,NUMBER,STRING");
        }
    } // stmt

    // public simple_stmt<null> = small_stmt {SEMICOLON small_stmt} [SEMICOLON] NEWLINE {NEWLINE};
    public void simple_stmt() throws ParserError {
        small_stmt();
        while ((id == PythonScanner.TOKEN_SEMICOLON)) {
            if (id == PythonScanner.TOKEN_SEMICOLON) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "SEMICOLON");
            }
            small_stmt();
        } // while
        if ((id == PythonScanner.TOKEN_SEMICOLON)) {
            if (id == PythonScanner.TOKEN_SEMICOLON) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "SEMICOLON");
            }
        }
        if (id == PythonScanner.TOKEN_NEWLINE) {
            next(); // <-- here 2
        } else {
            throw new ParserError(t, nt, "NEWLINE");
        }
        while ((id == PythonScanner.TOKEN_NEWLINE)) {
            if (id == PythonScanner.TOKEN_NEWLINE) {
                next(); // <-- here 2
            } else {
                throw new ParserError(t, nt, "NEWLINE");
            }
        } // while
    } // simple_stmt
